Fix padding in .header and increase gap for foundations/flex/03...

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -15,6 +15,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -51,11 +52,11 @@ ul {
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 10px;
+  gap: 16px;
 }
 
 .left, .right {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 16px;
 }
